--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/header %>
 
-<h1 class="blue">Hello World - <%=name%></h1>
-
+    <h1 class="white mt-6">Hello World - <%=name%></h1>
+    
 <% include ./partials/footer %>
