--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,8 +2,24 @@
 <html>
     <head>
         <title>Jacob Richardson</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
     </head>
-    <body>
-        <!-- Implement Navigation -->
+    <body class="background-color">
+        <nav class="navbar navbar-expand-lg fixed-top nav-background">
+            <a class="navbar-brand nav-color" href="#">Jacob Richardson</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+            <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link nav-color" href="#">About <span class="sr-only">
+                <a class="nav-item nav-link nav-color" href="#">Projects</a>
+                <a class="nav-item nav-link nav-color" href="#">Contact</a>
+                <a class="nav-item nav-link nav-color" href="https://github.com/JacobRichardson"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </nav>
+
+        <div class="container" id="site-content">
