--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <% include ./partials/header %>
 
     <h1 class="white mt-6">Hello World - <%=name%></h1>
+    <h2 id=typewriter class="white mt-4"></h2>
     
+    
+    
+<script src="js/modules/typewriter.js"></script>
+<script src=js/pages/index.js></script>
 <% include ./partials/footer %>
